TFP-6095 håndtere overlappende opphold (#360)